--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: 'gcr.io/$PROJECT_ID/hugo'
-  args: ['-t', 'casper','-v']
+#  args: ['-t', 'casper','-v']
 - name: 'gcr.io/$PROJECT_ID/firebase'
   args: ['deploy']
   secretEnv: ['FIREBASE_TOKEN']
