--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,7 @@ steps:
 - name: gcr.io/cloud-builders/git
   args: ['fetch', '--unshallow']
 - name: 'gcr.io/$PROJECT_ID/hugo'
-#  args: ['-t', 'casper','-v']
+  args: ['-t', 'casper','-v']
 - name: 'gcr.io/$PROJECT_ID/firebase'
   args: ['deploy']
   secretEnv: ['FIREBASE_TOKEN']
